--- a/fichaDeTreino.html
+++ b/fichaDeTreino.html
@@ -16,9 +16,9 @@
         <div id="container">
             <h1>Conheça sua ficha personalizada:</h1>
             <ul>
-                <li><a href="">Treino A</a></li>
-                <li><a href="">Treino B</a></li>
-                <li><a href="">Treino C</a></li>
+                <li><a href="TreinoA.html">Treino A</a></li>
+                <li><a href="TreinoB.html">Treino B</a></li>
+                <li><a href="TreinoC.html">Treino C</a></li>
             </ul>
         </div>
     </main>
